--- a/EKS/ConfigurationFiles/deployment.yaml
+++ b/EKS/ConfigurationFiles/deployment.yaml
@@ -1,27 +1,26 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx
+  name: web-app-deployment
 spec:
+  replicas: 2  # Adjust the number of replicas as needed
   selector:
     matchLabels:
-      app: nginx
-  replicas: 3
+      app: web-app
   template:
     metadata:
       labels:
-        app: nginx
+        app: web-app
     spec:
       containers:
-      - name: nginx
-        image: nginx
+      - name: web-app
+        image: nginx:latest
         ports:
         - containerPort: 80
         volumeMounts:
-        - name: nginx
+        - name: web-app-files
           mountPath: /usr/share/nginx/html
   volumes:
-  - name: nginx-html
+  - name: web-app-files
     configMap:
-      name: nginx-html
-      
+      name: web-app
