--- a/EKS/ConfigurationFiles/service.yaml
+++ b/EKS/ConfigurationFiles/service.yaml
@@ -1,12 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: web-app-service
+  name: nginx
+  labels:
+    app: nginx
 spec:
-  selector:
-    app: web-app
   ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 80
+  - name: http
+    port: 80
+    protocol: TCP
+    targetPort: 80
+  selector:
+    app: nginx
   type: LoadBalancer
