--- a/EKS/ConfigurationFiles/deployment.yaml
+++ b/EKS/ConfigurationFiles/deployment.yaml
@@ -1,35 +1,19 @@
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: web-app
-data:
-  index.html:
-  style.css:
-
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: web-app-deployment
+  name: nginx
 spec:
-  replicas: 3  # Adjust the number of replicas as needed
   selector:
     matchLabels:
-      app: web-app
+      app: nginx
+  replicas: 1
   template:
     metadata:
       labels:
-        app: web-app
+        app: nginx
     spec:
       containers:
-      - name: web-app
-        image: nginx:latest
+      - name: nginx
+        image: nginx
         ports:
         - containerPort: 80
-        volumeMounts:
-        - name: web-app-files
-          mountPath: /usr/share/nginx/html
-  volumes:
-  - name: web-app-files
-    configMap:
-      name: web-app
